--- a/styles.css/home.css
+++ b/styles.css/home.css
@@ -18,7 +18,7 @@ body {
 }
 
 nav {
-    background-color: white;
+    /* background-color: white; */
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
 }
 
